3 files modified, 4 added

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -5,13 +5,18 @@
     <a [title]="product.name + ' details'">
       {{ product.name }}
     </a>
-
-    <p *ngIf="product.description">Description: {{ product.description }}</p>
-
-    {{ product.price }}
-
-    <button type="button" (click)="share()">Share</button>
   </h3>
+  
+  <p *ngIf="product.description">Description: {{ product.description }}</p>
+
+  <button type="button" (click)="share()">
+    Share
+  </button>
+
+  <app-product-alerts
+    [product]="product"
+    (notify)="onNotify()">
+  </app-product-alerts>
 </div>
 
 <!-- 
